--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,8 +3,7 @@ FROM node:latest
 WORKDIR /server
 
 COPY package*.json ./
-RUN npm install -g npm@10.2.3
-RUN npm install --force
+RUN npm install
 COPY . .
 
 EXPOSE 5000
