--- a/server/package.json
+++ b/server/package.json
@@ -3,19 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "init": "npm install --force"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "init": "npm install"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "express-validator": "^7.2.0",
     "fs": "^0.0.1-security",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "pg": "^8.11.3",
     "sequelize": "^6.33.0",
+    "winston": "^3.17.0",
     "xlsx": "^0.18.5"
   },
   "keywords": [],
